# bitpat

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
