[package]
name = "bitpat"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Bit-level matching against values"
documentation = "https://docs.rs/bitpat/"
repository = "https://github.com/jonas-schievink/bitpat.git"
keywords = ["bit", "level", "pattern", "match"]
categories = ["rust-patterns"]  # literally
readme = "README.md"
license = "CC0-1.0"

[dependencies]

[dev-dependencies]
version-sync = "0.5"


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'bitpat = "[a-z0-9\\.-]+"'
replace = 'bitpat = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/bitpat/[a-z0-9\\.-]+"
replace = "https://docs.rs/bitpat/{{version}}"
